--- a/palindrome-checker/src/PalindromeForm.css
+++ b/palindrome-checker/src/PalindromeForm.css
@@ -1,11 +1,54 @@
-input {
-
-    border-radius: 30px;
-    border: rgb(12, 159, 227);
-    background-color: rgb(172, 215, 236);
-}
-
-label {
+label,
+.result {
     font-size: large;
     padding: 1rem;
+    color: pink;
+    font-size: 2rem;
+
+}
+
+.result {
+    display: block;
+    padding-bottom: 0.5rem;
+}
+
+.green {
+    color: green;
+}
+
+.red {
+    color: rgb(247, 111, 154);
+}
+
+/* rgb(255, 0, 255); */
+input {
+    width: 300px;
+    height: 50px;
+    border-radius: 20px;
+    border: none;
+    font-size: 2rem;
+    color: white;
+    opacity: 0.8;
+    background-color: rgb(247, 111, 154);
+    padding-left: 0.5rem;
+}
+
+
+form {
+    padding: 1rem;
+    box-sizing: border-box;
+    padding-top: 120px;
+    width: 600px;
+    height: 330px;
+    border: solid 1px pink;
+    background-color: rgb(9, 21, 22);
+    text-align: center;
+}
+
+.guide {
+    font-size: 1rem;
+    color: pink;
+    opacity: 0.8;
+    padding-top: 0;
+    margin-top: 0;
 }
