--- a/bubble-sort-app/src/App.css
+++ b/bubble-sort-app/src/App.css
@@ -38,6 +38,12 @@ h1 {
 
 }
 
+h4 {
+  color: orange;
+  text-decoration: underline;
+  font-size: 1.5rem;
+}
+
 
 button,
 select {
@@ -79,4 +85,8 @@ button:active {
   font-size: 1.5rem;
   font-weight: bold;
   color: orange;
+}
+
+table td {
+  border: solid 2px orange;
 }
