--- a/stack-task/src/App.css
+++ b/stack-task/src/App.css
@@ -1,38 +1,88 @@
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+  background-color: pink;
+}
+
+.title-container {
+  width: 600px;
+  border-radius: 50%;
+  background-color: rgb(247, 111, 154);
+  opacity: 0.5;
+  text-align: center;
+  height: 150px;
+
+}
+
+
+header {
+  height: 200px;
+}
+
+h1 {
+  font-size: 3rem;
+  text-transform: uppercase;
+  line-height: 150px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+button {
+  border-radius: 50%;
+  height: 80px;
+  width: 80px;
+  font-size: 1.4rem;
+  border: none;
+  box-shadow: 2px 2px 5px rgb(46, 39, 39);
+  font-weight: 800;
+  color: white;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active {
+  color: green;
+}
+
+#pop {
+  background-color: rgb(247, 111, 154);
+}
+
+#push {
+  background-color: rgb(65, 65, 177);
+}
+
+#getNumbers {
+  background-color: black;
+  height: 100px;
+  width: 100px;
+  font-size: 1rem;
+
+}
+
+h3 {
+  color: rgb(39, 49, 98);
+}
+
+table {
+  border: 2px solid rgb(247, 111, 154);
+  border-radius: 20px;
+  padding: 0.5rem;
+  box-shadow: 0 0 4px rgb(247, 111, 154);
+  min-height: 70px;
+  min-width: 400px;
+}
+
+td {
+
+  padding: 0.3rem;
+  font-size: 1.2rem;
+  color: rgb(247, 111, 154);
+  font-weight: 800;
+
 }
