--- a/stack-task/src/App.css
+++ b/stack-task/src/App.css
@@ -24,6 +24,12 @@
 
 }
 
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
 
 header {
   height: 200px;
@@ -74,6 +80,13 @@ h3 {
   color: rgb(39, 49, 98);
 }
 
+.text {
+  font-size: 1.1rem;
+  color: var(--darkpink);
+  font-weight: 600;
+  margin: 1rem 0;
+}
+
 table {
   border: 2px solid var(--darkpink);
   box-shadow: 0 0 4px var(--darkpink);
@@ -81,13 +94,16 @@ table {
   padding: 0.5rem;
   min-height: 70px;
   min-width: 400px;
+
 }
 
 td {
-
+  display: inline;
   padding: 0.3rem;
   font-size: 1.2rem;
   color: var(--darkpink);
   font-weight: 800;
+  line-height: 70px;
+  margin: 0.2rem;
 
 }
