--- a/stack-task/src/App.css
+++ b/stack-task/src/App.css
@@ -28,6 +28,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin: 1rem;
 }
 
 
@@ -42,8 +43,6 @@ h1 {
   color: white;
 }
 
-
-
 button {
   border-radius: 50%;
   height: 80px;
@@ -54,6 +53,7 @@ button {
   font-weight: 800;
   color: white;
   cursor: pointer;
+  margin: 0.5rem 1rem;
 }
 
 button:active {
@@ -70,8 +70,8 @@ button:active {
 
 #getNumbers {
   background-color: black;
-  height: 100px;
-  width: 100px;
+  height: 90px;
+  width: 90px;
   font-size: 1rem;
 
 }
@@ -81,6 +81,7 @@ h3 {
 }
 
 .text {
+  height: 40px;
   font-size: 1.1rem;
   color: var(--darkpink);
   font-weight: 600;
@@ -91,9 +92,8 @@ table {
   border: 2px solid var(--darkpink);
   box-shadow: 0 0 4px var(--darkpink);
   border-radius: 20px;
-  padding: 0.5rem;
-  min-height: 70px;
   min-width: 400px;
+  height: 60px;
 
 }
 
@@ -103,7 +103,7 @@ td {
   font-size: 1.2rem;
   color: var(--darkpink);
   font-weight: 800;
-  line-height: 70px;
+  line-height: 60px;
   margin: 0.2rem;
 
 }
