--- a/queue_task/src/App.css
+++ b/queue_task/src/App.css
@@ -6,13 +6,21 @@
 
 .App {
   text-align: center;
-  background-color: rgb(217, 217, 217);
+  background: rgb(131, 58, 180);
+  background: linear-gradient(129deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+  width: 100%;
   height: 100vh;
+  padding: 2rem;
 
 }
 
+h1 {
+  color: white;
+  text-transform: uppercase;
+}
+
 header {
-  height: 20vh;
+  height: 10vh;
   width: 100vw;
 }
 
@@ -24,25 +32,43 @@ main {
 
 .queue-container {
   width: 80vw;
-  height: 40vh;
-  border: 2px solid red;
+  height: 20vh;
+  border: 4px solid rgb(32, 36, 45);
   display: flex;
   justify-content: center;
   background-color: white;
 }
 
 .queue-block {
-  width: 90px;
-  height: 90px;
+  width: 50px;
+  height: 50px;
   background-color: blueviolet;
   border-radius: 10px;
 }
 
-button {
-  height: 160px;
-  width: 160px;
-  border-radius: 50%;
-  line-height: 160px;
-  margin: 2rem;
+.button-container {
+  margin-top: 0;
+}
 
+button {
+  height: 140px;
+  width: 140px;
+  border-radius: 50%;
+  line-height: 140px;
+  margin: 0.5rem;
+  font-size: 1.3rem;
+  box-shadow: 1px 1px 3px rgb(109, 6, 6);
+  border: none;
+
+}
+
+button:active {
+  transform: scale(0.9);
+}
+
+img {
+
+  height: 80px;
+  width: auto;
+  cursor: pointer;
 }
