--- a/queue_task/src/App.css
+++ b/queue_task/src/App.css
@@ -9,9 +9,13 @@
   background: rgb(131, 58, 180);
   background: linear-gradient(129deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 2rem;
 
+}
+
+h3 {
+  margin-bottom: 0.8rem;
 }
 
 h1 {
@@ -21,7 +25,7 @@ h1 {
 
 header {
   height: 10vh;
-  width: 100vw;
+  width: 100%;
 }
 
 main {
@@ -30,13 +34,17 @@ main {
   align-items: center;
 }
 
+
 .queue-container {
   width: 80vw;
   height: 20vh;
   border: 4px solid rgb(32, 36, 45);
   display: flex;
-  justify-content: center;
+  align-items: center;
   background-color: white;
+  overflow-x: wrap;
+  overflow-y: scroll;
+
 }
 
 .queue-block {
@@ -51,14 +59,18 @@ main {
 }
 
 button {
-  height: 140px;
-  width: 140px;
+  height: 120px;
+  width: 120px;
   border-radius: 50%;
-  line-height: 140px;
-  margin: 0.5rem;
+  line-height: 120px;
+  margin: 1rem;
   font-size: 1.3rem;
-  box-shadow: 1px 1px 3px rgb(109, 6, 6);
+  box-shadow: 1px 2px 3px rgb(109, 6, 6);
   border: none;
+  color: rgb(209, 172, 113);
+  font-weight: 800;
+  text-shadow: 0px 1px black, -1px 0 white;
+  background: linear-gradient(rgb(96, 95, 95), lightgray, rgb(120, 119, 119));
 
 }
 
